<resources>
    <string name="app_name">WiiTools</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="test_toast">Toast测试</string>
    <string name="test_handler_bus">HandlerBus测试</string>
    <string name="test_input">Input测试</string>
    <string name="test_dialog">Dialog测试</string>
    <string name="test_select_date">SelectDate测试</string>
    <string name="test_sopfix">Sopfix测试</string>
    <string name="test_multi_type">MultiType测试</string>
    <string name="test_status_button">StatusButton测试</string>
    <string name="test_camera">Camera测试</string>


    <string name="scrollable_tab">scrollable tab</string>
    <string name="fixed_tab">fixed tab</string>
    <string name="dynamic_tab">dynamic tab</string>
    <string name="no_tab_only_indicator">no tab, only indicator</string>
    <string name="work_with_fragment_container">work with fragment container</string>
    <string name="tab_with_badge_view">tab with badge view</string>
    <string name="custom_navigator">custom navigator</string>
    <string name="random_page">random page</string>
    <string name="tab_with_custom_layout">load custom layout</string>
    <string name="test_magic_indicator">MagicIndicator测试</string>


    <string name="normal_app_name">MultiType</string>
    <string name="bilibili_app_name">MT: Bilibili</string>
    <string name="multi_grid_app_name">MT: MultiGrid</string>
    <string name="close">close</string>
    <string name="add">ADD</string>
    <string name="remove">REMOVE</string>
    <string name="clear">CLEAR</string>
</resources>
