<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <Button
                android:id="@+id/btn_test_toast"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="testToast"
                android:text="@string/test_toast"/>
            <Button
                android:id="@+id/btn_test_handler_bus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="testHandlerBus"
                android:text="@string/test_handler_bus"/>
            <Button
                android:id="@+id/btn_test_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="testInput"
                android:text="@string/test_input"/>

            <Button
                android:id="@+id/btn_test_dialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="testDialog"
                android:text="@string/test_dialog"/>

            <Button
                android:id="@+id/btn_select_date_dialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="testSelectDate"
                android:text="@string/test_select_date"/>

            <Button
                android:id="@+id/btn_sopfix"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="testSopfix"
                android:text="@string/test_sopfix"/>

            <Button
                android:id="@+id/btn_multi_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="testMultiType"
                android:text="@string/test_multi_type"/>

            <Button
                android:id="@+id/btn_status_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="testStatusButton"
                android:text="@string/test_status_button"/>

            <Button
                android:id="@+id/btn_magic_indicator"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="testMagicIndicator"
                android:text="@string/test_magic_indicator"/>

            <Button
                android:id="@+id/btn_camera"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="testCamera"
                android:text="@string/test_camera"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
