<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="getSimpleCenter"
                android:text="简单提示框"/>
            <Button
                android:id="@+id/btn_test_handler_bus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="testHandlerBus"
                android:text="@string/test_handler_bus"/>
            <Button
                android:id="@+id/btn_test_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="testInput"
                android:text="@string/test_input"/>

            <Button
                android:id="@+id/btn_test_dialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="testDialog"
                android:text="@string/test_dialog"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>

